makes metadata menu invisible on screens <= sm, fixes y axis tick formatting, shrinks title text on <=sm screen

--- a/components/scss/_variables.scss
+++ b/components/scss/_variables.scss
@@ -8,3 +8,6 @@ $top-offset: 50px;
 $side-offset: 25px;
 
 $header-size: 24px;
+
+$xs: 575px;
+$sm: 767px;
