--- a/components/scss/layout.scss
+++ b/components/scss/layout.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 #sample-map-2017{
   position: relative;
   font-family: sans-serif;
@@ -7,4 +9,11 @@
   width: 100%;
   height: 90vh;
   background:black;
+}
+
+@media (max-width: $sm) {
+  #map{
+    height:100vh;
+  }
+
 }
